--- a/mock.cfg
+++ b/mock.cfg
@@ -12,7 +12,7 @@ config_opts['environment']['GOPATH'] = "/go"
 config_opts['plugin_conf']['bind_mount_opts']['dirs'].append(('/go', '/go' ))
 config_opts['plugin_conf']['bind_mount_opts']['dirs'].append((os.environ['GOROOT'], os.environ['GOROOT']))
 
-# This doesn't seem to work
+# This doesn't seem to work on Docker
 #config_opts['plugin_conf']['tmpfs_enable'] = True
 #config_opts['plugin_conf']['tmpfs_opts'] = {}
 #config_opts['plugin_conf']['tmpfs_opts']['required_ram_mb'] = 1024
@@ -20,9 +20,9 @@ config_opts['plugin_conf']['bind_mount_opts']['dirs'].append((os.environ['GOROOT
 #config_opts['plugin_conf']['tmpfs_opts']['mode'] = '0755'
 #config_opts['plugin_conf']['tmpfs_opts']['keep_mounted'] = True
 
-# config_opts['plugin_conf']['sign_enable'] = False
-# config_opts['plugin_conf']['sign_opts'] = {}
-# config_opts['plugin_conf']['sign_opts']['cmd'] = 'rpmsign'
+config_opts['plugin_conf']['sign_enable'] = False
+config_opts['plugin_conf']['sign_opts'] = {}
+config_opts['plugin_conf']['sign_opts']['cmd'] = 'rpmsign'
 # The options to pass to the signing command. %(rpms)s will be expanded to
 # the rpms in the results folder.
-# config_opts['plugin_conf']['sign_opts']['opts'] = '--addsign %(rpms)s -D "%%_gpg_name your_name" -D "%%_gpg_path /home/your_name/.gnupg'
+config_opts['plugin_conf']['sign_opts']['opts'] = '--addsign %(rpms)s -D "%%_gpg_name your_name" -D "%%_gpg_path /home/your_name/.gnupg'
